# graphrag-pubmedqa-ablation

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  GAPS.md  KGQA_session_export.md  Makefile  PROJECT.md  README.md  RESULTS.md  SECURITY.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  keep-warm.yml
app/: README.md  dashboard.py
backend/: README.md  main.py  mcp_server.py  requirements.txt  test_main.py  test_mcp.py
docs/: _config.yml  index.md
frontend/: README.md  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/benchmark/: page.tsx
frontend/app/case-study/: page.tsx
frontend/components/: AnswerText.tsx  ChatPanel.tsx  ReasoningGraph.tsx
frontend/lib/: api.ts  results.ts  types.ts
notebooks/: 01_ingest.ipynb  02_benchmark.ipynb
scripts/: compare.py  ingest_neo4j.py  run_benchmark.py  verify_onnx_parity.py
src/graphrag/: __init__.py
src/kgqa/: config.py  evaluation.py  llm.py  models.py  providers.py  service.py
src/kgqa/retrieval/: __init__.py  base.py  graph.py  neo4j_graph.py
tests/: conftest.py  test_compare.py  test_evaluation.py  test_neo4j_graph.py  test_onnx_encoder.py  test_providers.py  test_results_regression.py  test_retrieval.py  test_run_benchmark.py  test_service.py
