[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kgqa"
version = "1.0.0"
description = "Fair GraphRAG vs PlainRAG comparison on PubMedQA"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vardh Jain", email = "vardhjain20@gmail.com" }]
keywords = ["graphrag", "rag", "knowledge-graph", "pubmedqa", "arangodb", "llm", "ablation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/vardhjain/graphrag-pubmedqa-ablation"
Repository = "https://github.com/vardhjain/graphrag-pubmedqa-ablation"
Issues = "https://github.com/vardhjain/graphrag-pubmedqa-ablation/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4.0", "pre-commit>=3.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests", "backend"]
addopts = "-q"

[tool.coverage.run]
source = ["kgqa", "graphrag"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests", "app", "backend"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter; long AQL strings are fine

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]  # sys.path insert before imports is intentional
"app/*" = ["E402"]      # same: sys.path setup precedes imports
"backend/*" = ["E402"]  # same: sys.path setup precedes imports
